--- a/src/i18n/es/notFound.json
+++ b/src/i18n/es/notFound.json
@@ -1,9 +1,7 @@
 {
-    "notFound": {
-        "title": "404 - Page Not Found",
-        "subtitle": "Sorry, the page you are looking for does not exist.",
-        "cta": "Go back to Home"
-    }
-
-
+  "notFound": {
+    "title": "404 - Página no encontrada",
+    "subtitle": "Lo siento, la página que buscas no existe.",
+    "cta": "Volver al inicio"
+  }
 }
