--- a/src/i18n/es/work.json
+++ b/src/i18n/es/work.json
@@ -1,6 +1,6 @@
 {
-    "work": {
-        "marquee": " WORK · ",
-        "eyebrow": "MARCOS' PROJECTS"
+  "work": {
+    "marquee": " PROYECTOS · ",
+    "eyebrow": "PROYECTOS DE MARCOS"
   }
 }
