--- a/src/i18n/fr/work.json
+++ b/src/i18n/fr/work.json
@@ -1,6 +1,6 @@
 {
-    "work": {
-        "marquee": " WORK · ",
-        "eyebrow": "MARCOS' PROJECTS"
+  "work": {
+    "marquee": " PROJETS · ",
+    "eyebrow": "PROJETS DE MARCOS"
   }
 }
